menu burger blanc, z-index du menu fixé, responsive ok fontawesome du menu ok

--- a/css/style.css
+++ b/css/style.css
@@ -102,9 +102,11 @@ body  {
 	-webkit-backface-visibility: hidden;
 	-webkit-transition: border-width 0.3s, background-color 0.3s, height 0s 0.3s;
 	transition: border-width 0.3s, background-color 0.3s, height 0s 0.3s;
+	z-index: 100;
 }
 
 .bt-menu.bt-menu-open {
+	z-index: 100;
 	height: 100%;
 	border-width: 0px 0px 50px 150px;
 	background-color: rgba(0,0,0,0.3);
@@ -139,7 +141,7 @@ body  {
 	display: block;
 	width: 100%;
 	height: 8%;
-	background-color: #000;
+	background-color: #fff;
 	font-size: 0px;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -157,7 +159,7 @@ body  {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #000;
+	background: #fff;
 	content: '';
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
@@ -311,7 +313,7 @@ body  {
 .bt-menu ul:first-of-type li a:focus,
 .bt-menu ul li a:hover:before,
 .bt-menu ul li a:focus:before {
-	color: #1abc9c;
+	color: #709ab2;
 }
 
 
